Closed Bug 1341731 Opened 7 years ago Closed 7 years ago

Crash in mozilla::dom::TabParent::RecvPDocAccessibleConstructor

Categories

(Core :: Disability Access APIs, defect)

54 Branch
Unspecified
Windows 10
defect
Not set
critical

Tracking

()

RESOLVED FIXED
mozilla54
Tracking Status
firefox51 --- unaffected
firefox52 --- unaffected
firefox53 --- unaffected
firefox54 --- fixed

People

(Reporter: jimm, Assigned: tbsaunde)

References

Details

(Keywords: crash, regression, topcrash, Whiteboard: aes+)

Crash Data

Attachments

(1 file)

New #8 top crasher.
Flags: needinfo?(tbsaunde+mozbugs)
Assignee: nobody → tbsaunde+mozbugs
Flags: needinfo?(tbsaunde+mozbugs)
Flags: needinfo?(dbolter)
Blocks: 1325258
Comment on attachment 8840080 [details] [diff] [review]
propagate failures before working around them

Review of attachment 8840080 [details] [diff] [review]:
-----------------------------------------------------------------

Looks good, thanks!
Attachment #8840080 - Flags: review?(yzenevich) → review+
Version: Trunk → 54 Branch
(In reply to Trevor Saunders (:tbsaunde) from comment #2)

> try build at
> https://treeherder.mozilla.org/#/
> jobs?repo=try&revision=e8a7f17d8539ffc5cd4570a6b4803178c03d17d4 if someone
> with a touch screen wants to test.

I couldn't get the try build to crash on my windows touchscreen laptop but I've had trouble getting crashes on nightly as well.
Flags: needinfo?(dbolter)
Pushed by tsaunders@mozilla.com:
https://hg.mozilla.org/integration/mozilla-inbound/rev/898e629b92ff
propagate failures before working around them r=yzen
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/mozilla-inbound/rev/a172fbd302fa
fixup werror bustage. r=bustage-fix on a CLOSED TREE
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: