bug 1341731 - propagate failures before working around them r=yzen